Commited fix to issue #1481 (http://ocportal.com/tracker/view.php?id=1481). [Mobile gallery layout issues]

--- a/themes/default/css/galleries.css
+++ b/themes/default/css/galleries.css
@@ -36,7 +36,12 @@
 }
 
 .gallery_grid_cell {
-	float: {!en_left};
+	{+START,IF,{$NOT,{$MOBILE}}}
+		float: {!en_left};
+	{+END}
+	{+START,IF,{$MOBILE}}
+		text-align: center;
+	{+END}
 	padding: 0.5em;
 }
 
@@ -45,6 +50,9 @@
 	border: 1px solid {$GET,standard_border};
 	background-color: {$GET,area_background};
 	{$BETA_CSS_PROPERTY,box-shadow: 3px 3px 10px {$GET,standard_border};}
+	{+START,IF,{$MOBILE}}
+		display: inline-block;
+	{+END}
 }
 
 .img_thumb_wrap {
@@ -141,9 +149,11 @@
 	margin-top: 0;
 }
 
-.media_box .gallery_entry_details {
-	max-width: 18em;
-}
+{+START,IF,{$NOT,{$MOBILE}}}
+	.media_box .gallery_entry_details {
+		max-width: 18em;
+	}
+{+END}
 
 /* The timer countdown */
 .changer {
